crates/check_cli/tests/snapshots/main_cases_config_extends/allows_reverting_fields_in_extended_config_to_default.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{ "extends": ["format.json"], "formatter": { "lineWidth": 80 } }
```

## `format.json`

```json
{ "formatter": { "lineWidth": 20 } }
```

## `test.js`

```js
debugger;
const a = ["lorem", "ipsum"];

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
