crates/check_cli/tests/snapshots/main_cases_config_extends/applies_extended_values_in_current_config.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{ "extends": ["format.json"], "formatter": { "lineWidth": 20 } }
```

## `format.json`

```json
{ "javascript": { "formatter": { "quoteStyle": "single" } } }
```

## `test.js`

```js
debugger;
const a = [
	'lorem',
	'ipsum',
];

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
