crates/check_cli/tests/snapshots/main_cases_config_extends/extends_config_merge_overrides.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "extends": ["shared.json"],
  "overrides": [
    {
      "includes": ["**/*.js"],
      "linter": { "rules": { "correctness": { "noUnusedVariables": "error" } } }
    }
  ]
}
```

## `shared.json`

```json
{
            "overrides": [{
                "includes": ["**/*.js"],
                "linter": { "rules": { "suspicious": { "noDebugger": "off" } } }
            }]
        }
```

## `test.js`

```js
debugger; const a = 0;
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.js:1:17 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This variable a is unused.
  
  > 1 │ debugger; const a = 0;
      │                 ^
  
  i Unused variables are often the result of an incomplete refactoring, typos, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend a with an underscore.
  
  - debugger;·const·a·=·0;
  + debugger;·const·_a·=·0;
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
